Commit bilingual files

--- a/docs/csharp/quick-starts/hello-world.yml
+++ b/docs/csharp/quick-starts/hello-world.yml
@@ -1,6 +1,6 @@
 ### YamlMime:YamlDocument
 documentType: Tutorial
-title: '<span data-ttu-id="df785-101">Hello C#</span><span class="sxs-lookup"><span data-stu-id="df785-101">Hello C#</span></span>'
+title: 'Hello C#'
 metadata:
   title: '<span data-ttu-id="df785-102">Hello C#。</span><span class="sxs-lookup"><span data-stu-id="df785-102">Hello C#.</span></span> <span data-ttu-id="df785-103">C# 言語の最初の導入です。</span><span class="sxs-lookup"><span data-stu-id="df785-103">Your first introduction to the C# language.</span></span>'
   description: '<span data-ttu-id="df785-104">このチュートリアルでは、ブラウザーを使用して C# を対話形式で学習できます。</span><span class="sxs-lookup"><span data-stu-id="df785-104">In this tutorial, you''ll use your browser to learn C# interactively.</span></span> <span data-ttu-id="df785-105">C# コードを記述し、ブラウザーで直接コードをコンパイルして、実行した結果を確認します。</span><span class="sxs-lookup"><span data-stu-id="df785-105">You write C# code and see the results of compiling and running your code directly in the browser.</span></span>'
