--- a/docs/csharp/quick-starts/numbers-in-csharp.yml
+++ b/docs/csharp/quick-starts/numbers-in-csharp.yml
@@ -1,6 +1,6 @@
 ### YamlMime:YamlDocument
 documentType: Tutorial
-title: '<span data-ttu-id="a91d1-101">C# の数値</span><span class="sxs-lookup"><span data-stu-id="a91d1-101">Numbers in C#</span></span>'
+title: 'C# の数値'
 metadata:
   title: '<span data-ttu-id="a91d1-102">C# の数値</span><span class="sxs-lookup"><span data-stu-id="a91d1-102">Numbers in C#</span></span>'
   description: '<span data-ttu-id="a91d1-103">数値型に関するこのチュートリアルでは、ブラウザーを使用して、対話形式で C# を学習します。</span><span class="sxs-lookup"><span data-stu-id="a91d1-103">In this tutorial about numeric types, you''ll use your browser to learn C# interactively.</span></span> <span data-ttu-id="a91d1-104">C# コードを記述し、ブラウザーで直接コードをコンパイルして実行した結果を確認します。</span><span class="sxs-lookup"><span data-stu-id="a91d1-104">You''re going to write C# code and see the results of compiling and running your code directly in the browser.</span></span>'
