--- a/docs/csharp/quick-starts/branches-and-loops.yml
+++ b/docs/csharp/quick-starts/branches-and-loops.yml
@@ -1,6 +1,6 @@
 ### YamlMime:YamlDocument
 documentType: Tutorial
-title: <span data-ttu-id="199b2-101">分岐とループ</span><span class="sxs-lookup"><span data-stu-id="199b2-101">Branches and loops</span></span>
+title: 分岐とループ
 metadata:
   title: <span data-ttu-id="199b2-102">分岐とループ</span><span class="sxs-lookup"><span data-stu-id="199b2-102">Branches and loops</span></span>
   description: '<span data-ttu-id="199b2-103">このチュートリアルでは、ブラウザーを使用して C# の分岐とループについて対話形式で学習できます。</span><span class="sxs-lookup"><span data-stu-id="199b2-103">In this tutorial about branches and loops, you''ll use your browser to learn C# interactively.</span></span> <span data-ttu-id="199b2-104">C# コードを記述し、ブラウザーで直接コードをコンパイルして実行した結果を確認します。</span><span class="sxs-lookup"><span data-stu-id="199b2-104">You''re going to write C# code and see the results of compiling and running your code directly in the browser.</span></span>'
