--- a/docs/csharp/quick-starts/list-collection.yml
+++ b/docs/csharp/quick-starts/list-collection.yml
@@ -1,6 +1,6 @@
 ### YamlMime:YamlDocument
 documentType: Tutorial
-title: '<span data-ttu-id="bd6d6-101">C# のコレクション</span><span class="sxs-lookup"><span data-stu-id="bd6d6-101">Collections in C#</span></span>'
+title: 'C# のコレクション'
 metadata:
   title: '<span data-ttu-id="bd6d6-102">C# のコレクション。</span><span class="sxs-lookup"><span data-stu-id="bd6d6-102">Collections in C#.</span></span> <span data-ttu-id="bd6d6-103">C# のシーケンスとコレクションの使用方法について説明します。</span><span class="sxs-lookup"><span data-stu-id="bd6d6-103">Learn to use sequences and collections in C#.</span></span>'
   description: '<span data-ttu-id="bd6d6-104">このチュートリアルでは、ブラウザーを使用して C# を対話形式で学習できます。</span><span class="sxs-lookup"><span data-stu-id="bd6d6-104">In this tutorial, you''ll use your browser to learn C# interactively.</span></span> <span data-ttu-id="bd6d6-105">C# コードを記述し、ブラウザーで直接コードをコンパイルして実行した結果を確認します。</span><span class="sxs-lookup"><span data-stu-id="bd6d6-105">You write C# code and see the results of compiling and running your code directly in the browser.</span></span>'
