--- a/docs/csharp/quick-starts/branches-and-loops.yml
+++ b/docs/csharp/quick-starts/branches-and-loops.yml
@@ -1,3 +1,4 @@
+### YamlMime:YamlDocument
 documentType: Tutorial
 title: "<span data-ttu-id=\"6b53e-101\">分岐とループ</span><span class=\"sxs-lookup\"><span data-stu-id=\"6b53e-101\">Branches and loops</span></span>"
 metadata:
