Commit translated content

--- a/docs/csharp/quick-starts/branches-and-loops.yml
+++ b/docs/csharp/quick-starts/branches-and-loops.yml
@@ -8,16 +8,16 @@ metadata:
   ms.custom: mvc
   displayType: two-column
   interactive: csharp
-  nextTutorialHref: arrays-and-collections
-  nextTutorialTitle: "C# の配列とコレクション"
+  nextTutorialHref: list-collection
+  nextTutorialTitle: "C# のコレクション"
 items:
 - durationInMinutes: 1
   content: "このクイック スタートでは、変数を調べてその変数に基づいて実行パスを変更するコードを記述する方法について説明します。 ブラウザーを使用して対話形式で C# を記述し、コードのコンパイルおよび実行の結果を確認します。 このクイック スタートでは、C# における分岐構造とループ構造を確認する一連のレッスンを行います。 これらのレッスンでは、C# 言語の基本を説明します。\n"
-  ms.openlocfilehash: 4c3b3e1c64134b12d9d6970d5d13f7777e8e7b74
-  ms.sourcegitcommit: a3ba258f7a8cab5c6d19a3743dd95e904ecebc44
+  ms.openlocfilehash: 93183a172fb5a94751c99c0f59f59af0b045ac09
+  ms.sourcegitcommit: 5177d6ae2e9baf026f07ee0631556700a5a193f7
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/27/2017
+  ms.lasthandoff: 11/28/2017
 - title: "if ステートメントを使用した条件判断"
   durationInMinutes: 4
   content: "対話型ウィンドウで次のコードを実行します。 そのためには、対話型ウィンドウで次のコード ブロックを入力し、**[実行]** をクリックします。\n\n```csharp\nint a = 5;\nint b = 6;\nif (a + b > 10)\n    Console.WriteLine(\"The answer is greater than 10.\");\n```\n\n合計が 10 未満になるように `b` の宣言を変更します。 \n\n```csharp\nint b = 3;\n```\n\nもう一度 **[実行]** をクリックします。 計算結果が 10 未満であるため、何も出力されません。 判定中の**条件**が false になっています。 `if` ステートメントの考えられる分岐の 1 つである true 分岐のみを記述したため、実行すべきコードがありません。\n\n> [!TIP]\n> C# (または何らかのプログラミング言語) について詳しく学習するに従い、コードを記述する際にミスをすることもあるでしょう。 **コンパイラ**は、そうしたエラーを発見して報告します。 エラー メッセージが出力された場合は、例のコードをよく確認して、対話型ウィンドウで修正すべきコードを見つけます。\n> こうした実習が C# コードの構造を理解するのに役立ちます。     \n\nこの最初のサンプルは、`if` とブール型の機能を示しています。 *ブール値*は、`true` または `false` という 2 つの値のいずれかを持つことができる変数です。 C# ではブール変数の `bool` という特殊な型を定義しています。 `if` ステートメントは、`bool` の値を確認します。 値が `true` の場合、`if` に続くステートメントを実行します。 それ以外の場合はスキップします。 \n\n条件を確認してその条件に基づいてステートメントを実行するというこのプロセスは非常に機能的です。 さらに詳しく見てみましょう。\n\n> [!NOTE]\n> このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。\n"
