--- a/docs/csharp/quick-starts/numbers-in-csharp.yml
+++ b/docs/csharp/quick-starts/numbers-in-csharp.yml
@@ -1,3 +1,4 @@
+### YamlMime:YamlDocument
 documentType: Tutorial
 title: "C# の数値"
 metadata:
@@ -10,14 +11,14 @@ metadata:
   nextTutorialTitle: "分岐と c# でのループ"
   displayType: two-column
   interactive: csharp
-items:
-- durationInMinutes: 1
-  content: "このクイック スタートを説明 c# での数値型は、対話的にお使いのブラウザーを使用して c# を記述しをコンパイルして、コードの実行の結果を表示します。 このチュートリアルには、C# の数値と算術演算に関する一連のレッスンが含まれています。 これらのレッスンでは、C# 言語の基本を説明します。\n"
   ms.openlocfilehash: bc859589078d1e2d16145125a80e738837c1ebf9
   ms.sourcegitcommit: 43c656811dd38a66a6672084c65d10c0cbbf2015
   ms.translationtype: HT
   ms.contentlocale: ja-JP
   ms.lasthandoff: 11/22/2017
+items:
+- durationInMinutes: 1
+  content: "このクイック スタートを説明 c# での数値型は、対話的にお使いのブラウザーを使用して c# を記述しをコンパイルして、コードの実行の結果を表示します。 このチュートリアルには、C# の数値と算術演算に関する一連のレッスンが含まれています。 これらのレッスンでは、C# 言語の基本を説明します。\n"
 - title: "整数の演算の確認"
   durationInMinutes: 4
   content: "対話型ウィンドウで次のコードを実行します。 そのためには、対話型ウィンドウで次のコード ブロックを入力し、**[実行]** をクリックします。\n\n```csharp\nint a = 18;\nint b = 6;\nint c = a + b;\nConsole.WriteLine(c);\n```\n\n整数を使用した基本的な算術演算の 1 つを確認しました。 `int` 型は、**整数**を表します (正の整数、または負の整数)。 加算には `+` 記号を使用します。 他の一般的な整数の算術演算には次のものがあります。\n\n- `-`: 減算\n- `*`: 乗算\n- `/`: 除算\n\n> [!TIP]\n> このクイック スタートでは、対話型のウィンドウで作成したコードを変更することにより、自分で調べることができます。 このクイック スタートでは、各ステップで試用できる例を示します。\n\nまずは、上記の各種演算を実行してみます。 3 行目を変更して、各演算を試します。 編集が終わるごとに、**[実行]** をクリックします。\n\n減算：\n\n```csharp\nint c = a - b;\n```\n\n乗算：\n\n```csharp\nint c = a * b;\n```\n\n除算： \n\n```csharp\nint c = a / b;\n```\n\n好みで、同じ行で複数の算術演算を実行することもできます。\n\n> [!TIP]\n> C# (または何らかのプログラミング言語) について詳しく学習するに従い、コードを記述する際にミスをすることもあるでしょう。 **コンパイラ**は、そうしたエラーを発見して報告します。 エラー メッセージが出力された場合は、例のコードをよく確認して、対話型ウィンドウで修正すべきコードを見つけます。\n> こうした実習が C# コードの構造を理解するのに役立ちます。     \n\n> [!NOTE]\n> このオンライン コーディング体験はプレビュー モードです。 問題が生じた場合は、[dotnet/try リポジトリ](https://github.com/dotnet/try/issues)でその問題をお知らせください。\n"
